--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,6 +52,6 @@
 </p>
 
 <p id="pdf_link"><%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %> |
+<%= link_to 'All Users', users_path %> |
 <%= link_to 'Download', user_path(@user, format: "pdf") %></p>
 
